<resources>
    <string name="app_name">VideoStream</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_user">کاربر اول</string>
    <string name="second_user">کاربر دوم</string>
    <string name="liked">لایک شده ها</string>
    <string name="video_time">مدت زمان ویديو: </string>
    <string name="lormipsom">لورم ایپسوم متن ساختگی</string>
    <string name="time_test">1:29</string>
    <string name="liked_videos">ویدیو های لایک شده</string>
    <string name="users">کاربر ها</string>
    <string name="title">تایتل</string>
    <string name="ad">آگهی تبلیغاتی</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pass_ad">ردآگهی</string>
    <string name="second">ثانیه</string>
</resources>