<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    app:cardCornerRadius="10dp"
    app:strokeColor="@color/black_safflower2"
    android:layout_marginTop="13sp"
    android:id="@+id/video_card"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/video_card_play_icon"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_play_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:elevation="6dp"
        />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/video_card_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/test_image"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:scaleType="centerCrop"
    />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16sp"
        android:layout_marginVertical="12sp"
        android:elevation="6dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_time"
                android:textSize="19sp"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/video_card_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_test"
                android:textSize="19sp"
                android:layout_marginTop="13sp"
                android:layout_marginStart="5sp"



                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lormipsom"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginTop="13sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13sp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentStart="true">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/main_user_icon"
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/ultra_small_user_icon"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/main_user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_user"
                    android:textSize="19sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="9sp"
                    />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_liked_icon"
                android:layout_width="36sp"
                android:layout_height="32sp"
                android:src="@drawable/small_filled_like"
                android:layout_gravity="center"
                android:layout_marginStart="13sp"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>