<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    android:id="@+id/ad_controller">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="21dp"
            >
            <TextView
                android:id="@+id/ad_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad"
                android:textSize="21sp"
                android:layout_alignParentStart="true"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">
                <LinearLayout
                    android:id="@+id/skip_ad_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/ad_close_bg"
                    android:padding="13dp"
                    android:visibility="gone"
                    >
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/skip_ad_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/baseline_skip_next_24"
                        android:layout_marginHorizontal="8dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pass_ad"
                        android:textSize="16sp"

                        />
                    <TextView
                        android:id="@+id/skip_ad_dots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=": "
                        android:textSize="16sp"

                        />
                    <TextView
                        android:id="@+id/skip_ad_remained_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textSize="16sp"

                        />
                    <TextView
                        android:id="@+id/skip_ad_seconds_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/second"
                        android:textSize="16sp"

                        />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="21dp"
            android:layout_marginTop="70dp"
            >
            <TextView
                android:id="@+id/ad_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textSize="19sp"
                android:layout_alignParentStart="true"
                android:textColor="@color/grey"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">
                <TextView
                    android:id="@+id/ad_passed_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textSize="19sp"

                    />
            </LinearLayout>
        </RelativeLayout>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/ad_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="0"
            android:layout_marginTop="13dp"
            app:trackThickness="6dp"
            app:trackColor="@color/grey"
            />

    </LinearLayout>

</FrameLayout>